BP chart align fix 2

--- a/source/styles/cases.css
+++ b/source/styles/cases.css
@@ -79,8 +79,8 @@ p, .case h1, .case h2, .case h3 {
 
 .description {
     text-align: center;
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
+    flex-direction: column;
     row-gap: 32px;
     margin: auto;
 }
